<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_message"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_chemicalName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/guess_box" />

    <Button
        android:id="@+id/button_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonGuessOnClick"
        android:text="@string/guess_button" />

    <EditText
        android:id="@+id/editText_addChemical"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/add_box" />

    <Button
        android:id="@+id/button_addChemical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:onClick="buttonAddChemicalOnClick" />

    <ImageView
        android:id="@+id/imageView_chemical"
        android:layout_width="match_parent"
        android:layout_height="212dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/right" />

</LinearLayout>